--- a/src/pages/components/code-snippet/accessibility.mdx
+++ b/src/pages/components/code-snippet/accessibility.mdx
@@ -97,5 +97,6 @@ The results of activating buttons are provided in text.
 ## Developer considerations
 
 Keep this in mind if you’re modifying Carbon or creating a custom component:
-– the inline code text is implemented as a button so its text can be copied
-– single line snippets take an additional tabstop to support arrow key scrolling
+
+* the inline code text is implemented as a button so its text can be copied
+* single line snippets take an additional tabstop to support arrow key scrolling
