--- a/src/pages/components/search/style.mdx
+++ b/src/pages/components/search/style.mdx
@@ -19,7 +19,10 @@ input color is `$field-02` and is used on `$ui-01` page backgrounds.
 | Field text  | text color       | `$text-primary`     |
 | Prompt text | text color       | `$text-placeholder` |
 | Icon        | fill             | `$icon-secondary`   |
-
+<Caption>
+  * Denotes a contextual color token that will change values based on the layer
+  it is placed on.
+</Caption>
 <div className="image--fixed">
 
 ![Example of Search using $field-01](images/search-style-4.png)
