docs(style): remove classnames part 3 (#2665)
* docs(style): remove classnames part 3

* overflow and pagination

* docs(style): remove classnames part 3

* Update src/pages/components/pagination/style.mdx

Co-authored-by: tracey king <king.traceyj@gmail.com>

* Update src/pages/components/search/style.mdx

Co-authored-by: tracey king <king.traceyj@gmail.com>

* Update style.mdx

Co-authored-by: tracey king <king.traceyj@gmail.com>
Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/src/pages/components/overflow-menu/style.mdx
+++ b/src/pages/components/overflow-menu/style.mdx
@@ -8,25 +8,30 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 ## Color
 
-| Class                                        | Property         | Color token                      |
-| -------------------------------------------- | ---------------- | -------------------------------- |
-| `.bx--overflow-menu__icon`                   | fill             | `$icon-primary`                  |
-| `.bx--overflow-menu-options`                 | background-color | `$layer`                         |
-| `.bx--overflow-menu-options__btn`            | color            | `$text-secondary`                |
-| `.bx--overflow-menu-options__option--danger` | background-color | `$layer`                         |
-| `.bx--overflow-menu-options`                 | box-shadow       | `0 2px 6px 0 rgba(0, 0, 0, 0.3)` |
+| Element            | Property         | Color token                      |
+| ------------------ | ---------------- | -------------------------------- |
+| Overflow menu icon | fill             | `$icon-primary`                  |
+| Menu option        | background-color | `$layer` \*                      |
+|                    | text color       | `$text-secondary`                |
+| Danger option      | background-color | `$layer`\*                       |
+| Container          | box-shadow       | `0 2px 6px 0 rgba(0, 0, 0, 0.3)` |
+
+<Caption>
+  * Denotes a contextual color token that will change values based on the layer
+  it is placed on.
+</Caption>
 
 ### Interactive states
 
-| Class                      | Property         | Color token            |
-| -------------------------- | ---------------- | ---------------------- |
-| `.bx--overflow-menu:focus` | border           | `$focus`               |
-| `option:focus`             | border           | `$focus`               |
-| `.bx--overflow-menu:hover` | background-color | `$background-hover`    |
-| `option:hover`             | background-color | `$layer-hover`         |
-| `option:hover`             | text color       | `$text-primary`        |
-| `option--danger:hover`     | background-color | `$button-danger-hover` |
-| `option:disabled`          | text color       | `$text-disabled`       |
+| Element              | Property         | Color token            |
+| -------------------- | ---------------- | ---------------------- |
+| Icon button:focus    | border           | `$focus`               |
+| Menu option:focus    | border           | `$focus`               |
+| Icon button:hover    | background-color | `$background-hover`    |
+| Menu option:hover    | background-color | `$layer-hover` \*      |
+|                      | text color       | `$text-primary`        |
+| Danger option:hover  | background-color | `$button-danger-hover` |
+| Menu option:disabled | text color       | `$text-disabled`       |
 
 <div className="image--fixed">
 
@@ -51,12 +56,11 @@ The height of an overflow menu is determined by the amount of content in the
 menu. The overflow menu icon can be found in the
 [icons](/guidelines/icons/library) library.
 
-| Class                                        | Property                    | px / rem  | Spacing token |
-| -------------------------------------------- | --------------------------- | --------- | ------------- |
-| `.bx--overflow-menu__icon`                   | icon size                   | 16 x 16px | –             |
-| `.bx--overflow-menu-options__btn`            | padding-right, padding-left | 16 / 1    | `$spacing-05` |
-| `.bx--overflow-menu-options`                 | height                      | 32 / 2    | –             |
-| `.bx--overflow-menu-options__option--danger` | border-top                  | 1px       | –             |
+| Element     | Property                    | px / rem  | Spacing token |
+| ----------- | --------------------------- | --------- | ------------- |
+| Icon        | icon size                   | 16 x 16px | –             |
+| Menu option | padding-right, padding-left | 16 / 1    | `$spacing-05` |
+| Divider     | border-top                  | 1px       | –             |
 
 <div className="image-fixed">
 
