--- a/src/pages/components/pagination/style.mdx
+++ b/src/pages/components/pagination/style.mdx
@@ -8,12 +8,17 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 ## Color
 
-| Class                          | Property         | Color token         |
-| ------------------------------ | ---------------- | ------------------- |
-| `.bx--pagination`              | background-color | `$layer` \*         |
-| `.bx--pagination`              | border-top       | `$border-subtle` \* |
-| `.bx--pagination__text`        | text color       | `$text-secondary`   |
-| `.bx--pagination__button-icon` | fill             | `$icon-primary`     |
+| Element   | Property         | Color token         |
+| --------- | ---------------- | ------------------- |
+| Container | background-color | `$layer` \*         |
+|           | border-top       | `$border-subtle` \* |
+| Text      | text color       | `$text-secondary`   |
+| Icon      | fill             | `$icon-primary`     |
+
+<Caption>
+  * Denotes a contextual color token that will change values based on the layer
+  it is placed on.
+</Caption>
 
 ## Typography
 
@@ -30,14 +35,12 @@ The Pagination bar is most commonly used in data tables. The width can vary
 depending on content and layout, but should span the entire width of the table
 it's being paired with.
 
-| Class                               | Property                    | px / rem  | Spacing token |
-| ----------------------------------- | --------------------------- | --------- | ------------- |
-| `.bx--pagination`                   | height                      | 48 / 3    | –             |
-| `.bx--pagination`                   | border                      | 1px       | –             |
-| `.bx--pagination`                   | padding-left, padding-right | 16 / 1    | `$spacing-05` |
-| `.bx--pagination .bx--select-input` | padding-left, padding-right | 16 / 1    | `$spacing-05` |
-| `.bx--pagination__button`           | height, width               | 16 / 1    | –             |
-| `arrow`                             | icon size                   | 20 x 20px | –             |
+| Element        | Property                    | px / rem  | Spacing token |
+| -------------- | --------------------------- | --------- | ------------- |
+| Container      | border                      | 1px       | –             |
+|                | padding-left, padding-right | 16 / 1    | `$spacing-05` |
+| Select control | padding-left, padding-right | 16 / 1    | `$spacing-05` |
+| Arrow icon     | size                        | 20 x 20px | –             |
 
 <div className="image--fixed">
 
@@ -46,3 +49,14 @@ it's being paired with.
 </div>
 
 <Caption>Structure and spacing measurements for Pagination | px / rem</Caption>
+
+## Sizes
+
+| Element          | Size        | Height (px/rem) |
+| ---------------- | ----------- | --------------- |
+| Container height | Small (sm)  | 32 / 2          |
+|                  | Medium (md) | 40 / 2.5        |
+|                  | Large (lg)  | 48 / 3          |
+| Icon button      | Small (sm)  | 32 / 2          |
+|                  | Medium (md) | 40 / 2.5        |
+|                  | Large (lg)  | 48 / 3          |
