fix: checkbox style tab bug

--- a/src/pages/components/checkbox/style.mdx
+++ b/src/pages/components/checkbox/style.mdx
@@ -15,7 +15,7 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 | Checkbox:unchecked | border           | `$icon-primary`   |
 |                    | background-color | transparent       |
 | Checkbox:checked   | background-color | `$icon-primary`   |
-|                    | checkmark        | `$text-inverse`   |
+|                    | checkmark        | `$icon-inverse`   |
 
 <Row>
 <Column colLg={8}>
