fix: code snippet style tab bug

--- a/src/pages/components/code-snippet/style.mdx
+++ b/src/pages/components/code-snippet/style.mdx
@@ -12,7 +12,7 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 | Element         | Property                                                              | Color token     |
 | --------------- | --------------------------------------------------------------------- | --------------- |
-| Container       | background                                                            | `$field` \*     |
+| Container       | background                                                            | `$layer` \*     |
 | Code            | text color                                                            | `$text-primary` |
 | Copy button     | See [ghost button - icon only](/components/button/style#ghost-button) |                 |
 | Container:focus | border                                                                | `$focus`        |
