--- a/src/pages/components/pagination/style.mdx
+++ b/src/pages/components/pagination/style.mdx
@@ -8,12 +8,13 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 ## Color
 
-| Element   | Property         | Color token         |
-| --------- | ---------------- | ------------------- |
-| Container | background-color | `$layer` \*         |
-|           | border-top       | `$border-subtle` \* |
-| Text      | text color       | `$text-secondary`   |
-| Icon      | fill             | `$icon-primary`     |
+| Element               | Property         | Color token         |
+| --------------------- | ---------------- | ------------------- |
+| Container             | background-color | `$layer` \*         |
+|                       | border-top       | `$border-subtle` \* |
+| Text: items per page  | text color       | `$text-primary`     |
+| Text: number of items | text color       | `$text-secondary`   |
+| Icon                  | fill             | `$icon-primary`     |
 
 <Caption>
   * Denotes a contextual color token that will change values based on the layer
