fix: select style tab bug

--- a/src/pages/components/select/style.mdx
+++ b/src/pages/components/select/style.mdx
@@ -13,7 +13,7 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 | Field         | background    | `$field` \*         |
 |               | border-bottom | `$border-strong` \* |
 | Inline select | background    | transparent         |
-| Label         | text color    | `$text-primary`     |
+| Label         | text color    | `$text-secondary`   |
 | Field text    | text color    | `$text-primary`     |
 | Helper text   | text color    | `$text-helper`      |
 | Icon          | fill          | `$icon-primary`     |
