Update progress bars
Changed gifs to video formats

--- a/src/pages/components/progress-bar/usage.mdx
+++ b/src/pages/components/progress-bar/usage.mdx
@@ -6,6 +6,24 @@ description:
 tabs: ['Usage', 'Style']
 ---
 
+import localVideo from './videos/progress-bar-usage-4.mp4';
+import localPoster from './images/progress-bar-usage-4.png';
+
+import localVideo1 from './videos/progress-bar-usage-5.mp4';
+import localPoster1 from './images/progress-bar-usage-5.png';
+
+import localVideo2 from './videos/progress-bar-usage-11.mp4';
+import localPoster2 from './images/progress-bar-usage-11.png';
+
+import localVideo3 from './videos/progress-bar-usage-17.mp4';
+import localPoster3 from './images/progress-bar-usage-17.png';
+
+import localVideo4 from './videos/progress-bar-usage-18.mp4';
+import localPoster4 from './images/progress-bar-usage-18.png';
+
+import localVideo5 from './videos/progress-bar-usage-21.mp4';
+import localPoster5 from './images/progress-bar-usage-21.png';
+
 <PageDescription>
 
 A progress bar provides feedback about the duration and progression of a
@@ -115,18 +133,6 @@ no back and forth motion.
 Use a determinate progress bar when the progress can be calculated against a
 specific goal. For example, when downloading a file of a known size.
 
-<Row>
-<Column colLg='8'>
-<GifPlayer color='dark'>
-
-![Determinate progress bar](/images/progress-bar-usage-4.gif)
-
-![Determinate progress bar](/images/progress-bar-usage-4.png)
-
-</GifPlayer>
-</Column>
-</Row>
-
 ## Indeterminate progress bar
 
 Indeterminate progress bars are used when the loading progress is unknown or the
@@ -140,15 +146,9 @@ determinate stage of the load is used to visually indicate the completion of the
 task to the user. In this scenario, a percentage indicator would not be present.
 
 <Row>
-<Column colLg='8'>
-<GifPlayer>
-
-![Indeterminate progress bar](/images/progress-bar-usage-5.gif)
-
-![Indeterminate progress bar](/images/progress-bar-usage-5.png)
-
-</GifPlayer>
-</Column>
+  <Column colLg="8">
+    <Video src={localVideo1} poster={localPoster1} />
+  </Column>
 </Row>
 
 ### Progress status
@@ -304,15 +304,9 @@ value is left-aligned, and the fill progresses from right to left. Keep in mind
 that the placement of the percent sign differs depending on the locale.
 
 <Row>
-<Column colLg='6'>
-<GifPlayer color='dark'>
-
-![Determinate progress bar](/images/progress-bar-usage-11.gif)
-
-![Determinate progress bar](/images/progress-bar-usage-11.png)
-
-</GifPlayer>
-</Column>
+  <Column colLg="6">
+    <Video src={localVideo2} poster={localPoster2} />
+  </Column>
 </Row>
 
 ## Content
@@ -377,13 +371,8 @@ visible but the indicator bar's progress stops in place and spans full width.
 
 <Row>
 <Column colLg='8'>
-<GifPlayer color='dark'>
 
-![The example shows the progress bar with error remains persistent as confirmation inside the image tile](images/progress-bar-usage-17.gif)
-
-![The example shows the progress bar with error remains persistent as confirmation inside the image tile](images/progress-bar-usage-17.png)
-
-</GifPlayer>
+<Video src={localVideo3} poster={localPoster3} />
 
 <Caption>
   The example shows the progress bar with error remains persistent as
@@ -395,13 +384,8 @@ visible but the indicator bar's progress stops in place and spans full width.
 
 <Row>
 <Column colLg='8'>
-<GifPlayer color='dark'>
 
-![The example shows thep progress bar is automatically dismissed once it’s done uploading](images/progress-bar-usage-18.gif)
-
-![The example shows thep progress bar is automatically dismissed once it’s done uploading](images/progress-bar-usage-18.png)
-
-</GifPlayer>
+<Video src={localVideo4} poster={localPoster4} />
 
 <Caption>
   The example shows thep progress bar is automatically dismissed once it’s done
@@ -454,15 +438,9 @@ An indeterminate bar can change to a determinate indicator (finishing from left
 to right) when enough information is gathered to end the load animation.
 
 <Row>
-<Column colLg='8' >
-<GifPlayer color='dark'>
-
-![An indeterminate bar can change to a determinate indicator](/images/progress-bar-usage-21.gif)
-
-![An indeterminate bar can change to a determinate indicator](/images/progress-bar-usage-21.png)
-
-</GifPlayer>
-</Column>
+  <Column colLg="8">
+    <Video src={localVideo5} poster={localPoster5} />
+  </Column>
 </Row>
 
 ## Accessibility
