Update progress bar
fixed sizing default to big

--- a/src/pages/components/progress-bar/style.mdx
+++ b/src/pages/components/progress-bar/style.mdx
@@ -94,10 +94,10 @@ to a maximum of six columns when possible.
 
 There are two sizes for the progress bar height, big and small.
 
-| Size    | Height px / rem |
-| ------- | --------------- |
-| Default | 8 / 0.5         |
-| Small   | 4 / 0.25        |
+| Size  | Height px / rem |
+| ----- | --------------- |
+| Big   | 8 / 0.5         |
+| Small | 4 / 0.25        |
 
 <div className="image--fixed">
 
