--- a/src/pages/components/progress-bar/usage.mdx
+++ b/src/pages/components/progress-bar/usage.mdx
@@ -211,10 +211,10 @@ progress bar.
 
 #### Height
 
-The progress bar is offered in two different sizes—default (8px) and small
-(4px). The default progress bar height is typically used when there is large
-amounts of space on a page. The small progress bar height is commonly used when
-space is restricted and can be placed within cards, data tables, or side panels.
+The progress bar is offered in two different sizes—big (8px) and small (4px).
+The big progress bar height is typically used when there is large amounts of
+space on a page. The small progress bar height is commonly used when space is
+restricted and can be placed within cards, data tables, or side panels.
 
 <Row>
 <Column colLg={8}>
