--- a/src/pages/components/link/usage.mdx
+++ b/src/pages/components/link/usage.mdx
@@ -65,8 +65,7 @@ be used for navigational actions.
       id: 'link',
       label: 'Link',
     },
-  ]}
->
+  ]}>
   <ComponentVariant
     id="link"
     knobs={{ Link: ['disabled', 'inline'] }}
@@ -79,8 +78,7 @@ be used for navigational actions.
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=link',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-link--default',
-    }}
-  >{`
+    }}>{`
   <Link href="#">Link</Link>
   `}</ComponentVariant>
 </ComponentDemo>
@@ -101,7 +99,7 @@ be used for navigational actions.
 
 ### Sizing
 
-There are three size variants for the link component: default, small, and large.
+There are three size variants for the link component: small, medium, and large.
 The link size should match the type size of the text it is inline with. When
 using links apart from other content, the link size should match the default
 body copy size of the page.
@@ -109,7 +107,7 @@ body copy size of the page.
 <Row>
 <Column colLg={8}>
 
-![Examples of link sizes](images/link-style-4.png)
+![Examples of link sizes](images/03_link_size_608.png)
 
 </Column>
 </Row>
