fix: loading bug

--- a/src/pages/components/loading/style.mdx
+++ b/src/pages/components/loading/style.mdx
@@ -8,12 +8,12 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 ## Color
 
-| Element       | Property         | Color token    |
-| ------------- | ---------------- | -------------- |
-| Large spinner | stroke           | `$interactive` |
-| Small spinner | stroke           | `$interactive` |
-|               | background       | `$layer-01`    |
-| Page overlay  | background-color | `$overlay`     |
+| Element       | Property         | Color token     |
+| ------------- | ---------------- | --------------- |
+| Large spinner | stroke           | `$interactive`  |
+| Small spinner | stroke           | `$interactive`  |
+|               | background       | `$layer-accent` |
+| Page overlay  | background-color | `$overlay`      |
 
 ## Structure
 
