--- a/src/pages/components/number-input/style.mdx
+++ b/src/pages/components/number-input/style.mdx
@@ -23,7 +23,7 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 <div className="image--fixed">
 
-![Number input example](images/number-input-style-2.png)
+![Number input example](images/number-input-style-1.png)
 
 </div>
 
@@ -31,17 +31,28 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 ### Interactive states
 
-| Element        | Property         | Color token      |
-| -------------- | ---------------- | ---------------- |
-| Field:focus    | border           | `$focus`         |
-| Controls:focus | border           | `$focus`         |
-| Field:invalid  | border           | `$support-error` |
-| Error icon     | color            | `$support-error` |
-| Error message  | text color       | `$support-error` |
-| Label:disabled | text color       | `$text-disabled` |
-| Field:disabled | background-color | `$field` \*      |
-|                | border-bottom    | transparent      |
-| Number         | text color       | `$text-disabled` |
+| Element         | Property         | Color token       |
+| --------------- | ---------------- | ----------------- |
+| Controls:hover  | background-color | `field-hover`     |
+| Field:focus     | border           | `$focus`          |
+| Controls:focus  | border           | `$focus`          |
+| Field:invalid   | border           | `$support-error`  |
+| Error icon      | svg              | `$support-error`  |
+| Error message   | text color       | `$text-error`     |
+| Warning icon    | svg              | `support-warning` |
+| Warning message | text color       | `text-primary`    |
+| Label:disabled  | text color       | `$text-disabled`  |
+| Field:disabled  | background-color | `$field` \*       |
+|                 | border-bottom    | transparent       |
+| Number          | text color       | `$text-disabled`  |
+
+<div className="image--fixed">
+
+![Number input example](images/number-input-style-2.png)
+
+</div>
+
+<Caption>Number input states example</Caption>
 
 ## Typography
 
@@ -69,7 +80,7 @@ The add and subtract icons can be found in the
 
 <div className="image--fixed">
 
-![Structure and spacing for number input](images/number-input-style-1.png)
+![Structure and spacing for number input](images/number-input-style-3.png)
 
 </div>
 
