fix: number input update images sizes

--- a/src/pages/components/number-input/style.mdx
+++ b/src/pages/components/number-input/style.mdx
@@ -21,13 +21,15 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
   it is placed on.
 </Caption>
 
-<div className="image--fixed">
+<Row>
+<Column colLg={8}>
 
 ![Number input example](images/number-input-style-1.png)
 
-</div>
+</Column>
+</Row>
 
-<Caption>Number input example</Caption>
+<Caption>Number input example.</Caption>
 
 ### Interactive states
 
@@ -46,13 +48,15 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 |                 | border-bottom    | transparent       |
 | Number          | text color       | `$text-disabled`  |
 
-<div className="image--fixed">
+<Row>
+<Column colLg={12}>
 
-![Number input example](images/number-input-style-2.png)
+![Number input states example](images/number-input-style-2.png)
 
-</div>
+</Column>
+</Row>
 
-<Caption>Number input states example</Caption>
+<Caption>Number input states example.</Caption>
 
 ## Typography
 
