docs: audit fixes 1

--- a/src/pages/components/accordion/style.mdx
+++ b/src/pages/components/accordion/style.mdx
@@ -9,12 +9,15 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 ## Color
 
-| Element | Property   | Color token      |
-| ------- | ---------- | ---------------- |
-| Title   | color      | `$text-primary`  |
-| Content | color      | `$text-primary`  |
-| Icon    | fill       | `$icon-primary`  |
-| Item    | border-top | `$border-subtle` |
+| Element | Property      | Color token      |
+| ------- | ------------- | ---------------- |
+| Title   | color         | `$text-primary`  |
+| Content | color         | `$text-primary`  |
+| Icon    | fill          | `$icon-primary`  |
+| Header  | border-top    | `$border-subtle` |
+|         | background    | Transparent      |
+| Panel   | border-bottom | `$border-subtle` |
+|         | background    | Transparent      |
 
 ### Interactive states
 
@@ -22,9 +25,9 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 | ------- | -------- | ---------- | ------------------- |
 | Header  | Hover    | background | `$background-hover` |
 |         | Focus    | border     | `$focus`            |
+|         | Disabled | border-top | `$border-subtle`    |
 | Title   | Disabled | background | `$text-disabled`    |
 | Icon    | Disabled | fill       | `$icon-disabled`    |
-| Item    | Disabled | border-top | `$border-disabled`  |
 
 <Row>
 <Column colLg={12}>
