--- a/src/pages/components/accordion/usage.mdx
+++ b/src/pages/components/accordion/usage.mdx
@@ -54,8 +54,7 @@ extra click; instead use a full scrolling page with normal headers.
       id: 'accordion',
       label: 'Accordion',
     },
-  ]}
->
+  ]}>
   <ComponentVariant
     id="accordion"
     knobs={{
@@ -71,8 +70,7 @@ extra click; instead use a full scrolling page with normal headers.
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=accordion',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-accordion--default',
-    }}
-  >
+    }}>
     {`
   <Accordion>
     <AccordionItem title="Title 1"><p>The accordion component delivers large amounts of content in a small space through progressive disclosure. The user gets key details about the underlying content and can choose to expand that content within the constraints of the accordion. Accordions work especially well on mobile interfaces or whenever vertical space is at a premium.</p></AccordionItem>
@@ -104,33 +102,30 @@ extra click; instead use a full scrolling page with normal headers.
 
 By default the chevron icon is placed on the `end` side of the header. This
 allows for the title on the `start` side to align with other type elements in
-the layout.
+the layout, which is the preferred alignment scenario.
+
+However, in some rare scenarios, the accordion may be modified to place the icon
+in `start` front of the title to function more like a tree. Most instances
+should use the default `end` alignment, especially for any pure content or
+documentation purposes. Icon placement in accordions should be consistent
+throughout your page and should not alternate.
 
 <DoDontRow>
 <DoDont
 colMd={4} colLg={4}
-caption="Do use the default icon alignment to keep accordion text aligned with other content on the page.">
+caption="In most cases, use the default end icon alignment to keep accordion text aligned with other content on the page.">
 
-![Do: use the default icon alignment to keep accordion text aligned with other content on the page.](./images/accordion-alignment-do.png)
+![Do use the default end icon alignment to keep accordion text aligned with other content on the page.](./images/accordion-alignment-do.png)
 
 </DoDont>
 <DoDont
 colMd={4} colLg={4}
-type="dont"
-caption="Don’t place icons on the left and create misalignment with the other text on the page.">
+caption="In rare case, you can place icons on the start side for tree like functionality.">
 
-![Don’t: place icons on the left and create misalignment with the other text on the page.](./images/accordion-alignment-dont.png)
+![Do place icons on the start side for tree like functionality.](./images/accordion-alignment-do-2.png)
 
 </DoDont>
 </DoDontRow>
-
-#### Modifier
-
-In rare scenarios, the accordion can be modified to place the icon in front of
-the title to function more like a tree. However, most instances should use the
-default alignment and for any pure content or documentation purposes, the
-default alignment is required. Icon placement should be consistent throughout
-your experience.
 
 ### Placement
 
