--- a/src/pages/components/button/style.mdx
+++ b/src/pages/components/button/style.mdx
@@ -38,7 +38,6 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 | Label              | text color       | `$text-on-color`           |
 | Icon               | svg              | `$icon-on-color`           |
 | Container          | background-color | `$button-secondary`        |
-|                    | border           | `$button-secondary`        |
 | Container:hover    | background-color | `$button-secondary-hover`  |
 | Container:active   | background-color | `$button-secondary-active` |
 | Container:focus    | border           | `$focus`                   |
@@ -63,17 +62,19 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 | Icon               | svg              | `$button-tertiary`        |
 | Container          | background-color | `transparent`             |
 |                    | border           | `$button-tertiary`        |
-| Label:hover        | text color       | `$text-on-color`          |
-| Icon:hover         | svg              | `$icon-on-color`          |
+| Label:hover        | text color       | `$text-inverse`           |
+| Icon:hover         | svg              | `$icon-inverse`           |
 | Container:hover    | background-color | `$button-tertiary-hover`  |
+| Label:active       | text color       | `$text-inverse`           |
+| Icon:active        | svg              | `$icon-inverse`           |
 | Container:active   | background-color | `$button-tertiary-active` |
 | Container:focus    | background-color | `$button-tertiary-hover`  |
 |                    | border           | `$focus`                  |
 |                    | inset            | `$focus-inset`            |
 | Container:disabled | background       | `transparent`             |
 |                    | border           | `$button-disabled`        |
-| Label:disabled     | text color       | `$text-on-color-disabled` |
-| Icon:disabled      | svg              | `$icon-on-color-disabled` |
+| Label:disabled     | text color       | `$text-disabled`          |
+| Icon:disabled      | svg              | `$icon-disabled`          |
 
 <Row>
 <Column colLg={8}>
@@ -112,15 +113,15 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 <br />
 
-| Element            | Property         | Color token    |
-| ------------------ | ---------------- | -------------- |
-| Icon               | svg              | `$icon-01`     |
-| Container          | background-color | Transparent    |
-| Container:hover    | background-color | `$hover-ui`    |
-| Container:active   | background-color | `$active-ui`   |
-| Container:focus    | border           | `$focus`       |
-| Container:selected | background-color | `$selected-ui` |
-| Icon:disabled      | svg              | `$disabled-02` |
+| Element            | Property         | Color token            |
+| ------------------ | ---------------- | ---------------------- |
+| Icon               | svg              | `$icon-primary`        |
+| Container          | background-color | Transparent            |
+| Container:hover    | background-color | `$background-hover`    |
+| Container:active   | background-color | `$background-active`   |
+| Container:focus    | border           | `$focus`               |
+| Container:selected | background-color | `$background-selected` |
+| Icon:disabled      | svg              | `$icon-disabled`       |
 
 <Row>
 <Column colLg={8}>
@@ -169,8 +170,8 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 | Container:focus    | border           | `$focus`                   |
 |                    | inset            | `$focus-inset`             |
 | Container:disabled | background-color | `$button-disabled`         |
-| Label:disabled     | text color       | `$text-on-color-disabled`  |
-| Icon:disabled      | svg              | `$icon-on-color-disabled`  |
+| Label:disabled     | text color       | `$text-disabled`           |
+| Icon:disabled      | svg              | `$icon-disabled`           |
 
 <Row>
 <Column colLg={8}>
@@ -195,8 +196,8 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 | Container:focus    | border           | `$focus`                   |
 |                    | inset            | `$focus-inset`             |
 | Container:disabled | background-color | `$button-disabled`         |
-| Label:disabled     | text color       | `$text-on-color-disabled`  |
-| Icon:disabled      | svg              | `$icon-on-color-disabled`  |
+| Label:disabled     | text color       | `$text-disabled`           |
+| Icon:disabled      | svg              | `$icon-disabled`           |
 
 <Row>
 <Column colLg={8}>
