--- a/src/pages/components/content-switcher/style.mdx
+++ b/src/pages/components/content-switcher/style.mdx
@@ -15,8 +15,9 @@ contrast color.
 
 | Element           | Property         | Color token               |
 | ----------------- | ---------------- | ------------------------- |
-| Unselected button | background-color | `$background`             |
+| Unselected button | background-color | Transparent               |
 |                   | text color       | `$text-secondary`         |
+|                   | border           | `$border-inverse`         |
 | Selected button   | background-color | `$layer-selected-inverse` |
 |                   | text color       | `$text-inverse`           |
 | Divider           | border           | `$border-subtle`          |
