--- a/src/pages/components/data-table/usage.mdx
+++ b/src/pages/components/data-table/usage.mdx
@@ -84,8 +84,7 @@ import {
       label: 'With batch actions',
     },
   ]}
-  scope={{ rowData, headerData, React, Delete, Save, Download }}
->
+  scope={{ rowData, headerData, React, Delete, Save, Download }}>
   <ComponentVariant
     id="default-table"
     knobs={{ DataTable: ['isSortable'], Table: ['size', 'useZebraStyles'] }}
@@ -98,8 +97,7 @@ import {
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=data-table',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-data-table--default',
-    }}
-  >
+    }}>
     {`<DataTable rows={rowData} headers={headerData}>
   {({ rows, headers, getHeaderProps, getTableProps }) => (
     <TableContainer title="DataTable">
@@ -139,8 +137,7 @@ import {
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=data-table',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-data-table--default',
-    }}
-  >
+    }}>
     {`<DataTable rows={rowData} headers={headerData}>
   {({
     rows,
@@ -189,8 +186,7 @@ import {
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=data-table',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-data-table--expandable',
-    }}
-  >
+    }}>
     {`<DataTable
   rows={rowData}
   headers={headerData}>
@@ -239,8 +235,7 @@ import {
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=data-table',
       'Web Components':
         'https://web-components.carbondesignsystem.com/?path=/story/components-data-table--default',
-    }}
-  >
+    }}>
     {`<DataTable rows={rowData} headers={headerData}>
   {({
     rows,
@@ -602,7 +597,7 @@ A sorted data table has three states: unsorted (`arrows`), sorted-up
 sorted state and is only shown if sorting is activated. Only the column being
 sorted should display an icon, and unsorted icons are only visible on hover. You
 can see a demo of table sorting in
-Carbon’s [React Storybook](http://react.carbondesignsystem.com/?path=/story/datatable--with-sorting).
+Carbon’s [React Storybook](https://react.carbondesignsystem.com/?path=/story/components-datatable-sorting--usage).
 
 <Row>
 <Column colLg={12}>
