fix v11 audit bugs: Progress indicator and Structured list

--- a/src/pages/components/progress-indicator/style.mdx
+++ b/src/pages/components/progress-indicator/style.mdx
@@ -31,13 +31,13 @@ outlined circle.
 
 ### Interactive states
 
-| Element       | Property         | Color token        |
-| ------------- | ---------------- | ------------------ |
-| Step:focus    | border           | `$focus`           |
-| Label:hover   | text color       | `$link-primary`    |
-| Icon:error    | fill             | `$support-error`   |
-| Icon:disabled | fill             | `$icon-disabled`   |
-| Line:disabled | background-color | `$border-disabled` |
+| Element       | Property         | Color token           |
+| ------------- | ---------------- | --------------------- |
+| Step:focus    | border           | `$focus`              |
+| Label:hover   | text color       | `$link-primary-hover` |
+| Icon:error    | fill             | `$support-error`      |
+| Icon:disabled | fill             | `$icon-disabled`      |
+| Line:disabled | background-color | `$border-disabled`    |
 
 <div className="image--fixed">
 
