--- a/src/pages/components/structured-list/style.mdx
+++ b/src/pages/components/structured-list/style.mdx
@@ -22,12 +22,12 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 ### Interactive states
 
-| Element      | Property         | Color token            |
-| ------------ | ---------------- | ---------------------- |
-| Row:selected | background-color | `$background-selected` |
-| Checkmark    | fill             | `$icon-primary`        |
-| Row:hover    | background-color | `$background-hover`    |
-| Row:focus    | border           | `$focus`               |
+| Element      | Property         | Color token      |
+| ------------ | ---------------- | ---------------- |
+| Row:selected | background-color | `layer-selected` |
+| Checkmark    | fill             | `$icon-primary`  |
+| Row:hover    | background-color | `$layer-hover`   |
+| Row:focus    | border           | `$focus`         |
 
 ## Typography
 
