--- a/src/pages/components/number-input/style.mdx
+++ b/src/pages/components/number-input/style.mdx
@@ -35,7 +35,7 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 | Element         | Property         | Color token       |
 | --------------- | ---------------- | ----------------- |
-| Controls:hover  | background-color | `field-hover`     |
+| Controls:hover  | background-color | `field-hover` \*    |
 | Field:focus     | border           | `$focus`          |
 | Controls:focus  | border           | `$focus`          |
 | Field:invalid   | border           | `$support-error`  |
