--- a/src/pages/components/loading/style.mdx
+++ b/src/pages/components/loading/style.mdx
@@ -12,7 +12,7 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 | ------------- | ---------------- | --------------- |
 | Large spinner | stroke           | `$interactive`  |
 | Small spinner | stroke           | `$interactive`  |
-|               | background       | `$layer-accent` |
+|               | background       | `$layer-accent` \*  |
 | Page overlay  | background-color | `$overlay`      |
 
 ## Structure
