fix: v11 audit bugs (#2750)
* fix: link bugs

* fix: loading bug

* fix: number input bugs

* fix: number input update images sizes

* fix: number input interaction image

* Update src/pages/components/number-input/style.mdx

Co-authored-by: Anna Gonzales <agonz@us.ibm.com>

* Update src/pages/components/loading/style.mdx

Co-authored-by: Anna Gonzales <agonz@us.ibm.com>

Co-authored-by: Anna Gonzales <agonz@us.ibm.com>
Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/src/pages/components/number-input/style.mdx
+++ b/src/pages/components/number-input/style.mdx
@@ -21,27 +21,42 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
   it is placed on.
 </Caption>
 
-<div className="image--fixed">
+<Row>
+<Column colLg={8}>
 
-![Number input example](images/number-input-style-2.png)
+![Number input example](images/number-input-style-1.png)
 
-</div>
+</Column>
+</Row>
 
-<Caption>Number input example</Caption>
+<Caption>Number input example.</Caption>
 
 ### Interactive states
 
-| Element        | Property         | Color token      |
-| -------------- | ---------------- | ---------------- |
-| Field:focus    | border           | `$focus`         |
-| Controls:focus | border           | `$focus`         |
-| Field:invalid  | border           | `$support-error` |
-| Error icon     | color            | `$support-error` |
-| Error message  | text color       | `$support-error` |
-| Label:disabled | text color       | `$text-disabled` |
-| Field:disabled | background-color | `$field` \*      |
-|                | border-bottom    | transparent      |
-| Number         | text color       | `$text-disabled` |
+| Element         | Property         | Color token       |
+| --------------- | ---------------- | ----------------- |
+| Controls:hover  | background-color | `field-hover` \*    |
+| Field:focus     | border           | `$focus`          |
+| Controls:focus  | border           | `$focus`          |
+| Field:invalid   | border           | `$support-error`  |
+| Error icon      | svg              | `$support-error`  |
+| Error message   | text color       | `$text-error`     |
+| Warning icon    | svg              | `support-warning` |
+| Warning message | text color       | `text-primary`    |
+| Label:disabled  | text color       | `$text-disabled`  |
+| Field:disabled  | background-color | `$field` \*       |
+|                 | border-bottom    | transparent       |
+| Number          | text color       | `$text-disabled`  |
+
+<Row>
+<Column colLg={12}>
+
+![Number input states example](images/number-input-style-2.png)
+
+</Column>
+</Row>
+
+<Caption>Number input states example.</Caption>
 
 ## Typography
 
@@ -69,7 +84,7 @@ The add and subtract icons can be found in the
 
 <div className="image--fixed">
 
-![Structure and spacing for number input](images/number-input-style-1.png)
+![Structure and spacing for number input](images/number-input-style-3.png)
 
 </div>
 
