--- a/src/pages/components/content-switcher/style.mdx
+++ b/src/pages/components/content-switcher/style.mdx
@@ -31,6 +31,7 @@ Hover states only apply to `unselected` buttons.
 | Hover    | background-color | `$background-hover` |
 |          | text color       | `$text-primary`     |
 | Focus    | border           | `$focus`            |
+|          | inner border     | `$focus-inset`      |
 | Disabled | background-color | `transparent`       |
 |          | text color       | `$text-disabled`    |
 |          | border           | `$border-disabled`  |
