docs(website): update themes usage docs

--- a/src/pages/guidelines/themes/code.mdx
+++ b/src/pages/guidelines/themes/code.mdx
@@ -17,9 +17,9 @@ Use the themes package to customize your product while maintaining consistency.
 
 <InlineNotification>
 
-If you’re using carbon-components there’s no reason to install the themes
-package separately. See our [get started](/get-started/develop/react) guide to
-start building.
+If you’re using `@carbon/react` there’s no reason to install the themes package
+separately. See our [get started](/get-started/develop/react) guide to start
+building.
 
 </InlineNotification>
 
