Update progress bar
Alignment variants and optional helper text

--- a/src/pages/components/progress-bar/style.mdx
+++ b/src/pages/components/progress-bar/style.mdx
@@ -58,11 +58,10 @@ tabs: ['Usage', 'Style']
 
 ## Structure
 
-Progress bar can have two ways for text alignment. The first one has text
-aligned left with progress bar and the second one has text aligned to the middle
-of the progress bar. The width of a progress bar can be customized appropriately
-for its context. The minimum width of a progress bar is 48px and keep its width
-to a maximum of six columns when possible.
+Depending on the use case, progress bar can have three ways for text alignment:
+default, inline, and indented. The width of a progress bar can be customized
+appropriately for its context. The minimum width of a progress bar is 48px and
+keep its width to a maximum of six columns when possible.
 
 | Element              | Property       | px / rem | Spacing token |
 | -------------------- | -------------- | -------- | ------------- |
