--- a/src/pages/components/progress-bar/usage.mdx
+++ b/src/pages/components/progress-bar/usage.mdx
@@ -248,9 +248,10 @@ a window or application.
 
 ### Alignment
 
-Text alignment depends on the context and area given. As long as the text is
-placed close to the progress bar, it’s up to designers to provide the best
-judgement that fits the context.
+Text alignment depends on the context and area given. Progress bar can have
+three ways for text alignment: default, inline, and indented. As long as the
+text is placed close to the progress bar, it’s up to designers to provide the
+best judgement that fits the context.
 
 <Row>
 <Column colLg={12}>
