--- a/src/pages/components/code-snippet/accessibility.mdx
+++ b/src/pages/components/code-snippet/accessibility.mdx
@@ -35,7 +35,7 @@ accessibility considerations.
 
 ### Keyboard interaction
 
-For all three variants, the code snippet can be copied with Space or Enter. Arrow
+For all three variants, the code snippet can be copied with `Space` or `Enter`. Arrow
 keys can operate scroll bars.
 
 <Row>
@@ -46,7 +46,7 @@ keys can operate scroll bars.
 </Column>
 </Row>
 
-By default, each inline code snippet is reachable by Tab and copied with Space or Enter.
+By default, each inline code snippet is reachable by `Tab` and copied with `Space` or `Enter`.
 
 <Row>
 <Column colLg={8}>
@@ -66,9 +66,9 @@ The single line code snippet tabstop supports left and right arrow key scrolling
 </Column>
 </Row>
 
-The multi-line’s buttons are reachable by Tab and activated with Space or Enter.
+The multi-line’s buttons are reachable by `Tab` and activated with `Space` or `Enter`.
 
-### Labelling and updates
+### Labeling and updates
 
 Carbon provides the copy button's default label and tooltip behavior. Carbon
 handles notices about the success of the copy function, as well as updates to the
